# circuitpy_flight_software

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONVENTIONS.md  LICENSE  Makefile  Pipfile  README.md  boot.py  cdh.py  code.py  config.example.json  config.json  decode_fm.sh  functions.py  main.py  payload.py  pyproject.toml  pyserial.py  repl.py  requirements.txt  ruff.toml  safemode.py  see-serial-connections.py  sonar-project.properties  sync-time.py  test.txt  test_sd.py  version.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  bug.md  feature.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
Batt_Board/: README.md  can_test.py  code.py  detumble.py  main.py  repl.py
Batt_Board/lib/: Big_Data.py  battery_functions.py  pysquared_eps.py
CircuitPy/: README.md
CircuitPy/Batt_Board/: can_listen.py  code.py  detumble.py  main.py  safemode.py
CircuitPy/Batt_Board/lib/: Big_Data.py  adafruit_ina219.py  battery_functions.py  can_bus_helper.py  pysquared_eps.py
CircuitPy/FC_Board/: code.py  main.py  payload.py
CircuitPy/FC_Board/detumble/: __init__.py  detumble.py
CircuitPy/FC_Board/instrument/: __init__.py  gyroscope.py  magnetometer.py
CircuitPy/FC_Board/lib/: Field.py  adafruit_ina219.py  adafruit_ov5640.py  functions.py  pysquared.py  pysquared_rfm9x.py
CircuitPy/Tests/: LiDARtest.py  comms.py  detumbletest.py  echo.py  facetest.py  radio_test.py
CircuitPy/experimental/: sf_hop.py
FC_Board/: boot.py  cdh.py  code.py  commandsConfig.py  config.json  config.py  detumble.py  main.py  payload.py  repl.py  safemode.py
FC_Board/lib/: Big_Data.py  Field.py  adafruit_drv2605.mpy  adafruit_drv2605.py  adafruit_lis2mdl.py  adafruit_lsm303_accel.py  adafruit_mcp9808.py  adafruit_ov5640.py  adafruit_pca9685.py  adafruit_tca9548a.mpy  adafruit_tca9548a.py  adafruit_ticks.py  adafruit_veml7700.py  battery_helper.py  can_bus_helper.py  functions.py  neopixel.py  packet_manager.py  packet_sender.py  pysquared.py  requirements.txt  rv3028.py
FC_Board/tests/: test_detumble.py
PicoSDK/Batt_Pico_sdk/: CMakeLists.txt
PicoSDK/Batt_Pico_sdk/Battery_Software/: CMakeLists.txt
PicoSDK/Batt_Pico_sdk/Battery_Software/boot/: CMakeLists.txt  blink.pio  boot.cpp
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/: CMakeLists.txt
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/Big_Data/: Big_Data.cpp  Big_Data.h
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/device_drivers/: ADS1015.cpp  ADS1015.h  DRV2605.cpp  DRV2605.h  INA219.cpp  INA219.h  MCP25625.h  MCP25625_DRIVER.cpp  MCP25625_DRIVER.h  MCP9808.cpp  MCP9808.h  PCA9685.cpp  PCA9685.h  PCT2075.cpp  PCT2075.h  TCA9548A.cpp  TCA9548A.h  VEML7700.cpp  VEML7700.h
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/functions/: functions.cpp  functions.h
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/main/: main.cpp  main.h
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/neopixel/: neopixel.h
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/pysquared/: pysquared.cpp  pysquared.h
PicoSDK/Batt_Pico_sdk/Battery_Software/lib/tools/: tools.cpp  tools.h
PicoSDK/FC_Pico_sdk/: CMakeLists.txt
PicoSDK/FC_Pico_sdk/Flight_Software/: CMakeLists.txt
PicoSDK/FC_Pico_sdk/Flight_Software/boot/: neopixel.pio
PicoSDK/FC_Pico_sdk/Flight_Software/lib/: CMakeLists.txt
PicoSDK/FC_Pico_sdk/Flight_Software/lib/device_drivers/: LSM303AGR.cpp  LSM303AGR.h
PicoSDK/FC_Pico_sdk/Flight_Software/lib/functions/: functions.cpp  functions.h
PicoSDK/FC_Pico_sdk/Flight_Software/lib/main/: main.cpp
PicoSDK/FC_Pico_sdk/Flight_Software/lib/neopixel/: neopixel.cpp
PicoSDK/FC_Pico_sdk/Flight_Software/lib/pysquared/: pysquared.cpp  pysquared.h
PicoSDK/FC_Pico_sdk/i2c_tests/scan/: CMakeLists.txt  scan.c
PicoSDK/FC_Pico_sdk/i2c_tests/slave/: CMakeLists.txt  slave.c
PicoSDK/FC_Pico_sdk/test/: CMakeLists.txt
Tests/: Yagi.py  cmd_simple.py  detumbletest.py  echo.py  facetest.py  radio_test.py  rpt_simple.py  rx_simple.py
Tests/unit_tests/: test_can_bus_helper.py  test_detumble.py
asyncio/: __init__.py  adafruit_ticks.py  core.py  event.py  funcs.py  lock.py  manifest.py  stream.py  task.py  traceback.py
docs/: dev-guide-linux.md  dev-guide-macos.md  dev-guide-windows.md  dev-guide.md
experimental/lib/: packet_receiver.py
experimental/tests/: simple_client.py  simple_server.py
lib/: Big_Data.py  Field.py  adafruit_drv2605.mpy  adafruit_mcp9808.mpy  adafruit_ticks.mpy  cdh.py  functions.py  pysquared.py  pysquared_rfm9x.py  requirements.txt
lib/adafruit_rfm/: LICENSE  README.rst  README.rst.license
lib/proveskit_functions/: Big_Data.py  can_bus_helper.py  functions.py  pysquared.py  rv3028.py
lib/pysquared/: Big_Data.py  Config.py  FCB_class.py  Field.py  adafruit_logging.mpy  battery_helper.py  bitflags.py  can_bus_helper.py  cdh.py  ceh.py  commandsConfig.py  config.py  debugcolor.py  decorators.py  detumble.py  easy_comms_circuit.py  exception.py  functions.py  hardware.py  jedi.py  logger.py  packet_manager.py  packet_sender.py  pysquared.py  radio.py  rfm9x_factory.py  rv3028.py  sleep_helper.py  state_of_health.py  update_and_write_json_quick_test.py
lib/rv3028/: registers.py  rv3028.py
mocks/circuitpython/: busio.py  byte_array.py  digitalio.py  microcontroller.py  rtc.py
proves/: cdh.py  code.py  repl.py
pysquared/: Big_Data.py  cdh.py  functions.py  logger.py  packet_manager.py  packet_sender.py  pysquared.py  satellite.py  sleep_helper.py
pysquared/config/: config.py
pysquared/hardware/: busio.py  decorators.py  digitalio.py
pysquared/nvm/: counter.py  flag.py  register.py
sphinx/: Makefile  conf.py  index.rst  modules.rst
src/: boot.py  main.py  repl.py
stubs/circuitpython/: busio.py  byte_array.py  digitalio.py  microcontroller.py
tests/on-board-testing/: README.md  test-functions.py
tests/repl/: LiDARtest.py  README.md  Yagi.py  comms.py  detumbletest.py  echo.py  facetest.py  fsk_test.py  packet_receiver.py  radio_test.py
tests/unit/: conftest.py  test_config.py  test_detumble.py  test_functions.py  test_logger.py  test_multi_bit_flag.py
(+115 files in other folders)
