add_library(main main/main.h main/main.cpp)
add_library(neopixel neopixel/neopixel.h neopixel/neopixel.cpp)
add_library(tools tools/tools.h tools/tools.cpp)
add_library(pysquared pysquared/pysquared.h pysquared/pysquared.cpp)
add_library(functions functions/functions.h functions/functions.cpp)
add_library(big_data Big_Data/Big_Data.h Big_Data/Big_Data.cpp)
add_library(ina219 device_drivers/INA219.h device_drivers/INA219.cpp)
add_library(pct2075 device_drivers/PCT2075.h device_drivers/PCT2075.cpp)
add_library(pca9685 device_drivers/PCA9685.h device_drivers/PCA9685.cpp)
add_library(tca9548a device_drivers/TCA9548A.h device_drivers/TCA9548A.cpp)
add_library(mcp9808 device_drivers/MCP9808.h device_drivers/MCP9808.cpp)
add_library(veml7700 device_drivers/VEML7700.h device_drivers/VEML7700.cpp)
add_library(drv2605 device_drivers/DRV2605.h device_drivers/DRV2605.cpp)
add_library(ads1015 device_drivers/ADS1015.h device_drivers/ADS1015.cpp)

target_link_libraries(main PRIVATE pico_stdlib neopixel hardware_pio hardware_i2c tools pysquared functions)
target_link_libraries(neopixel PRIVATE hardware_pio pico_stdlib)
target_link_libraries(tools PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(pysquared PRIVATE pico_stdlib hardware_pio hardware_gpio hardware_i2c neopixel tools functions ina219 pct2075 pca9685 tca9548a mcp9808 ads1015)
target_link_libraries(ina219 PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(pct2075 PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(pca9685 PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(tca9548a PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(mcp9808 PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(veml7700 PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(drv2605 PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(ads1015 PRIVATE pico_stdlib hardware_i2c)
target_link_libraries(functions PRIVATE pico_stdlib hardware_pio hardware_gpio hardware_i2c neopixel tools pysquared big_data tca9548a)
target_link_libraries(big_data PRIVATE pico_stdlib hardware_i2c mcp9808 veml7700 drv2605 tca9548a)